<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:padding="15dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailSignInInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="textEmailAddress"
            android:hint="@string/signUpEmailHint"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordSignInInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="textPassword"
            android:hint="@string/passwordTextView"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/signInBtnText" />

    <android.support.design.button.MaterialButton
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpBtnText" />




</LinearLayout>