<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginBottom="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="@drawable/doctor_item_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp">


                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:id="@+id/doctorProfileImageView"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginStart="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/circle_profile_placeholder"
                        android:scaleType="fitXY"/>

                    <TextView
                        android:id="@+id/doctorItemNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/placeholder_text"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/doctorProfileImageView"
                        app:layout_constraintTop_toTopOf="@+id/doctorProfileImageView"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/doctorItemSpecialtyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_text"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toBottomOf="@+id/doctorProfileImageView"
                        app:layout_constraintStart_toStartOf="@+id/doctorItemNameTextView"
                        app:layout_constraintTop_toBottomOf="@+id/doctorItemNameTextView" />


                </android.support.constraint.ConstraintLayout>


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="15dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bookAppointmentTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/book_now"
                        android:textSize="16sp"
                        android:textColor="@color/gradientStartBlue"/>

                    <TextView
                        android:id="@+id/callDoctorTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/call_now_rom"
                        android:textSize="16sp"
                        android:textColor="@color/gradientStartBlue"/>

                </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>